--- a/css/style2.css
+++ b/css/style2.css
@@ -23,7 +23,7 @@ header {
 }
 
 header {
-    background: url(../img/doom_image.png) center;
+    background: url(../img/Laser_quazer.jpg) center;
     background-size: cover;
 }
 
